Documentation edits made through Mintlify web editor

--- a/ai-resources/ai-tools-overview.mdx
+++ b/ai-resources/ai-tools-overview.mdx
@@ -24,13 +24,11 @@ SAS provides age-appropriate AI tools for different divisions:
 
     Integrated with Google Workspace for research, writing, and learning support.
   </Card>
-
   <Card title="Middle School (6-8)" icon="school" color="#E51322">
     **Magic School AI**
 
     Educational AI designed specifically for middle school learning and projects.
   </Card>
-
   <Card title="Elementary (1-5)" icon="child" color="#1A4190">
     **Toddle AI**
 
@@ -43,6 +41,10 @@ SAS provides age-appropriate AI tools for different divisions:
 
   Staff have access to multiple AI tools for lesson planning, differentiation, and administrative tasks.
 </Card>
+
+# AI Events in the Region
+
+<iframe src="https://script.google.com/a/macros/sas.edu.sg/s/AKfycbzU5LFBLg1sa_1p0oSyfaAujBrROAw5tsr2OhJ1z_bdc9FjqVD2RzY3-Qrf_KHcH6J5/exec" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-top-navigation" allowfullscreen loading="lazy" title="Upcoming Events" />
 
 ---
 
@@ -62,7 +64,6 @@ SAS provides age-appropriate AI tools for different divisions:
     - Project planning
     - Language learning
   </Card>
-
   <Card title="For Faculty & Staff" icon="chalkboard-user" color="#1A4190">
     - Lesson planning
     - Content creation
@@ -73,6 +74,7 @@ SAS provides age-appropriate AI tools for different divisions:
 </CardGroup>
 
 **Key Features:**
+
 - **Integrated with Google Workspace** - Works directly in Docs, Gmail, Sheets
 - **Multi-modal** - Understands text, images, and documents
 - **Real-time collaboration** - Use AI while working with others
@@ -95,22 +97,24 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
     **ChatGPT** is a conversational AI developed by OpenAI. It's one of the most popular AI tools globally.
 
     **Access:**
+
     - Free version: chat.openai.com
-    - Paid version (ChatGPT Plus): $20/month
+    - Paid version (ChatGPT Plus): \$20/month
     - Not officially provided by SAS
 
     **Capabilities:**
+
     - General knowledge questions
     - Writing assistance
     - Code generation
     - Creative projects
     - Problem-solving
   </Accordion>
-
   <Accordion title="SAS Policy on ChatGPT" icon="shield">
     **ChatGPT is NOT officially supported at SAS.**
 
     **Important Guidelines:**
+
     - Always use Gemini (official SAS tool) first
     - If using ChatGPT for personal learning, follow academic integrity policies
     - Never share SAS confidential information with ChatGPT
@@ -128,22 +132,24 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
     **Claude** is an AI assistant developed by Anthropic, focused on safety and helpfulness.
 
     **Access:**
+
     - Free version: claude.ai
-    - Paid version (Claude Pro): $20/month
+    - Paid version (Claude Pro): \$20/month
     - Not officially provided by SAS
 
     **Capabilities:**
+
     - Long document analysis
     - Complex reasoning
     - Code assistance
     - Research support
     - Nuanced conversations
   </Accordion>
-
   <Accordion title="SAS Policy on Claude" icon="shield">
     **Claude is NOT officially supported at SAS.**
 
     **Same guidelines as ChatGPT:**
+
     - Prefer Gemini (official SAS tool)
     - Follow academic integrity policies if using
     - Don't share SAS confidential information
@@ -159,18 +165,19 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
     **Microsoft Copilot** is AI integrated into Microsoft 365 applications (Word, Excel, PowerPoint, Teams).
 
     **Access:**
+
     - Available in Microsoft 365 apps
     - Enterprise version requires subscription
     - Check with IT about SAS availability
 
     **Capabilities:**
+
     - Document drafting and editing
     - Data analysis in Excel
     - Presentation creation
     - Email composition
     - Meeting summaries
   </Accordion>
-
   <Accordion title="SAS Availability" icon="circle-question">
     **Status: Check with IT Support**
 
@@ -184,22 +191,26 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
   **You may encounter other AI tools for specific purposes:**
 
   **Image Generation:**
+
   - DALL-E (OpenAI)
   - Midjourney
   - Stable Diffusion
   - Adobe Firefly
 
   **Code Assistance:**
+
   - GitHub Copilot
   - Replit AI
   - Cursor
 
   **Research & Writing:**
+
   - Perplexity AI
   - Quillbot
   - Grammarly (AI-enhanced)
 
   **Presentation & Design:**
+
   - Canva Magic (AI features in Canva)
   - Beautiful.ai
   - Gamma
@@ -213,43 +224,46 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 
 ### Feature Comparison
 
-| Feature | Gemini (HS/Staff) | Magic School (MS) | Toddle AI (ES) | ChatGPT | Claude |
-|---------|-------------------|-------------------|----------------|---------|---------|
-| **SAS Official** | ✅ HS & Staff | ✅ Middle School | ✅ Elementary | ❌ No | ❌ No |
-| **Who Can Use** | Grades 9-12 + Staff | Grades 6-8 | Grades 1-5 + Staff | Personal only | Personal only |
-| **Google Workspace Integration** | ✅ Yes | ⚠️ Limited | ❌ No | ❌ No | ❌ No |
-| **LMS Integration** | ❌ No | ✅ Yes | ✅ Yes (Toddle) | ❌ No | ❌ No |
-| **Free Access** | ✅ Yes (SAS) | ✅ Yes (SAS) | ✅ Yes (SAS) | ✅ Limited | ✅ Limited |
-| **Data Privacy (SAS Managed)** | ✅ Yes | ✅ Yes | ✅ Yes | ❌ No | ❌ No |
-| **Age-Appropriate** | ✅ HS | ✅ MS | ✅ ES | ⚠️ 13+ | ⚠️ 13+ |
-| **Multi-modal (images, text)** | ✅ Yes | ✅ Yes | ⚠️ Limited | ✅ Yes (Plus) | ✅ Yes |
-| **Real-time Web Search** | ✅ Yes | ⚠️ Limited | ❌ No | ⚠️ Limited | ❌ No |
-| **Academic Integrity Monitoring** | ✅ Yes | ✅ Yes | ✅ Yes | ❌ No | ❌ No |
+| Feature                           | Gemini (HS/Staff)   | Magic School (MS) | Toddle AI (ES)     | ChatGPT       | Claude        |
+| --------------------------------- | ------------------- | ----------------- | ------------------ | ------------- | ------------- |
+| **SAS Official**                  | ✅ HS & Staff        | ✅ Middle School   | ✅ Elementary       | ❌ No          | ❌ No          |
+| **Who Can Use**                   | Grades 9-12 + Staff | Grades 6-8        | Grades 1-5 + Staff | Personal only | Personal only |
+| **Google Workspace Integration**  | ✅ Yes               | ⚠️ Limited        | ❌ No               | ❌ No          | ❌ No          |
+| **LMS Integration**               | ❌ No                | ✅ Yes             | ✅ Yes (Toddle)     | ❌ No          | ❌ No          |
+| **Free Access**                   | ✅ Yes (SAS)         | ✅ Yes (SAS)       | ✅ Yes (SAS)        | ✅ Limited     | ✅ Limited     |
+| **Data Privacy (SAS Managed)**    | ✅ Yes               | ✅ Yes             | ✅ Yes              | ❌ No          | ❌ No          |
+| **Age-Appropriate**               | ✅ HS                | ✅ MS              | ✅ ES               | ⚠️ 13+        | ⚠️ 13+        |
+| **Multi-modal (images, text)**    | ✅ Yes               | ✅ Yes             | ⚠️ Limited         | ✅ Yes (Plus)  | ✅ Yes         |
+| **Real-time Web Search**          | ✅ Yes               | ⚠️ Limited        | ❌ No               | ⚠️ Limited    | ❌ No          |
+| **Academic Integrity Monitoring** | ✅ Yes               | ✅ Yes             | ✅ Yes              | ❌ No          | ❌ No          |
 
 ### When to Use Which Tool
 
 <Steps>
   <Step title="Use Your Division's Official AI Tool">
     **High School (Grades 9-12):**
+
     - Use **Google Gemini** for all schoolwork
     - Integrated with Google Workspace
     - [Gemini Guide](/ai-resources/gemini-guide)
 
     **Middle School (Grades 6-8):**
+
     - Use **Magic School AI** for assignments
     - Designed for middle school curriculum
     - Ask your teacher for access instructions
 
     **Elementary School (Grades 1-5):**
+
     - Use **Toddle AI** within your LMS
     - Age-appropriate and teacher-guided
     - Embedded in your learning platform
 
     **Why:** These are SAS-approved, monitored, and age-appropriate
   </Step>
-
   <Step title="Consider External Tools (With Permission Only)">
     **You might use other tools when:**
+
     - Teacher explicitly approves a specific tool for a project
     - Comparing AI responses for educational purposes
     - Personal learning outside of assignments
@@ -257,9 +271,9 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 
     **Always:** Document your use and follow academic integrity guidelines
   </Step>
-
   <Step title="Avoid External Tools for Academic Work">
     **Don't use ChatGPT, Claude, or other external AI without permission for:**
+
     - Graded assignments
     - Tests or quizzes
     - Writing that represents your own work
@@ -279,6 +293,7 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
   AI tools like Gemini, ChatGPT, and Claude are based on **Large Language Models (LLMs)** - AI systems trained on vast amounts of text data to understand and generate human-like responses.
 
   **Key Points:**
+
   - AI predicts the most likely next words based on patterns in training data
   - AI doesn't "know" things like humans - it recognizes patterns
   - Responses are generated, not retrieved from a database
@@ -292,21 +307,17 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
   1. **Be Specific**
      - ❌ "Tell me about history"
      - ✅ "Explain the causes of World War II in 3 main points"
-
   2. **Provide Context**
      - ❌ "Help with my essay"
      - ✅ "I'm writing a 5-paragraph persuasive essay for 10th grade English about renewable energy. Can you help me brainstorm three supporting arguments?"
-
   3. **Ask for Format**
      - "Explain this in bullet points"
      - "Create a table comparing..."
      - "Write this for a middle school audience"
-
   4. **Iterate and Refine**
      - Start broad, then get specific
      - Ask follow-up questions
      - Request clarification or examples
-
   5. **Set Constraints**
      - "In 100 words or less..."
      - "Using only sources from 2020-2024..."
@@ -314,25 +325,9 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 </Accordion>
 
 <Accordion title="What AI Can and Cannot Do" icon="scale-balanced">
-  **AI Can:**
-  ✅ Explain complex concepts in simpler terms
-  ✅ Generate ideas and brainstorm
-  ✅ Provide examples and analogies
-  ✅ Help organize thoughts and outlines
-  ✅ Draft and edit text
-  ✅ Translate languages
-  ✅ Summarize long documents
-  ✅ Answer questions based on training data
+  **AI Can:** ✅ Explain complex concepts in simpler terms ✅ Generate ideas and brainstorm ✅ Provide examples and analogies ✅ Help organize thoughts and outlines ✅ Draft and edit text ✅ Translate languages ✅ Summarize long documents ✅ Answer questions based on training data
 
-  **AI Cannot:**
-  ❌ Think creatively like humans
-  ❌ Understand context like people
-  ❌ Access real-time information (unless explicitly enabled)
-  ❌ Guarantee accuracy (can produce false information)
-  ❌ Replace critical thinking and learning
-  ❌ Understand emotions and nuance perfectly
-  ❌ Make ethical decisions for you
-  ❌ Access SAS-specific information unless provided
+  **AI Cannot:** ❌ Think creatively like humans ❌ Understand context like people ❌ Access real-time information (unless explicitly enabled) ❌ Guarantee accuracy (can produce false information) ❌ Replace critical thinking and learning ❌ Understand emotions and nuance perfectly ❌ Make ethical decisions for you ❌ Access SAS-specific information unless provided
 </Accordion>
 
 ---
@@ -356,25 +351,28 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 <CardGroup cols={2}>
   <Card title="Gemini (SAS Managed)" icon="shield-check" color="#1A4190">
     **Data Handling:**
+
     - Managed by SAS IT
     - Subject to SAS data policies
     - Integrated with Google Workspace security
     - Activity may be monitored for safety
 
     **More Secure For:**
+
     - School-related work
     - Assignments and projects
     - Collaboration with classmates
   </Card>
-
   <Card title="External AI Tools" icon="globe" color="#E51322">
     **Data Handling:**
+
     - NOT managed by SAS
     - Subject to external privacy policies
     - Data may be used for training
     - Limited SAS oversight
 
     **Use Caution When:**
+
     - Using for personal learning
     - Sharing any information
     - Working on sensitive topics
@@ -403,46 +401,49 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 <Steps>
   <Step title="1. Use AI to Learn, Not to Replace Learning">
     **Good Use:**
+
     - Ask AI to explain a difficult concept
     - Have AI generate practice problems
     - Use AI to check your understanding
 
     **Poor Use:**
+
     - Copy AI-generated essays without understanding
     - Use AI to complete all your homework
     - Rely on AI instead of learning the material
   </Step>
-
   <Step title="2. Always Cite AI Use">
     When using AI for any academic work:
+
     - Document which AI tool you used
     - Explain how you used it
     - Cite AI-generated content appropriately
     - Follow your teacher's citation requirements
 
     **Example Citation:**
+
     > "I used Google Gemini to brainstorm initial ideas for this essay and to check grammar in my final draft."
   </Step>
-
   <Step title="3. Verify AI Information">
     AI can make mistakes!
+
     - Don't assume AI responses are always accurate
     - Cross-check important facts with reliable sources
     - Verify citations and references AI provides
     - Use critical thinking to evaluate AI output
   </Step>
-
   <Step title="4. Use AI Ethically">
     Follow [AI Ethics & Responsible Use](/ai-resources/ai-ethics) and [Academic Integrity](/ai-resources/ai-academic-integrity) guidelines:
+
     - Respect academic honesty policies
     - Don't use AI to cheat
     - Consider bias in AI responses
     - Respect intellectual property
     - Protect privacy (yours and others')
   </Step>
-
   <Step title="5. Ask When Unsure">
     **Before using AI for any assignment:**
+
     - Check the assignment instructions
     - Ask your teacher if AI use is permitted
     - Clarify how AI should be cited
@@ -457,31 +458,30 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 ### For Students
 
 <Accordion title="New to AI? Start Here" icon="rocket">
-  **Step 1: Learn About Gemini**
-  Read the [Gemini Usage Guide](/ai-resources/gemini-guide) to understand SAS's official AI tool.
+  **Step 1: Learn About Gemini** Read the [Gemini Usage Guide](/ai-resources/gemini-guide) to understand SAS's official AI tool.
 
-  **Step 2: Understand the Rules**
-  Review [AI Academic Integrity](/ai-resources/ai-academic-integrity) to know what's allowed.
+  **Step 2: Understand the Rules** Review [AI Academic Integrity](/ai-resources/ai-academic-integrity) to know what's allowed.
 
-  **Step 3: Practice Responsibly**
-  Start with low-stakes activities:
+  **Step 3: Practice Responsibly** Start with low-stakes activities:
+
   - Ask Gemini to explain a homework concept
   - Have Gemini quiz you on study material
   - Use Gemini to brainstorm project ideas
 
-  **Step 4: Ask Your Teacher**
-  Before using AI for graded work, always confirm it's permitted.
+  **Step 4: Ask Your Teacher** Before using AI for graded work, always confirm it's permitted.
 </Accordion>
 
 ### For Teachers
 
 <Accordion title="Integrating AI in Your Classroom" icon="chalkboard-user">
   **Resources for Educators:**
+
   - [Gemini for Educators Guide](/ai-resources/gemini-guide#for-teachers)
   - [Setting AI Policies for Your Class](/ai-resources/ai-academic-integrity#teacher-guidance)
   - [AI Ethics Curriculum](/ai-resources/ai-ethics)
 
   **Contact EdTech for Support:**
+
   - Lesson plan integration
   - AI literacy curriculum
   - Student training sessions
@@ -494,18 +494,19 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 
 <Accordion title="Supporting Your Child's AI Learning" icon="users">
   **Understanding AI at SAS:**
+
   - SAS uses Google Gemini as the official AI tool
   - AI is used to enhance learning, not replace it
   - Academic integrity policies apply to AI use
   - Age-appropriate guidelines are in place
 
   **Questions to Ask Your Child:**
+
   - "How are you using AI for schoolwork?"
   - "What has your teacher said about AI for this assignment?"
   - "Can you explain what the AI helped you learn?"
 
-  **Concerns?**
-  Contact your child's teacher or EdTech Support: [edtech@sas.edu.sg](mailto:edtech@sas.edu.sg)
+  **Concerns?** Contact your child's teacher or EdTech Support: [edtech@sas.edu.sg](mailto:edtech@sas.edu.sg)
 </Accordion>
 
 ---
@@ -514,51 +515,55 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 
 <AccordionGroup>
   <Accordion title="Why does SAS use different AI tools for each division?" icon="question">
-    **Age-Appropriate AI:**
-    SAS provides different AI tools based on developmental stages:
+    **Age-Appropriate AI:** SAS provides different AI tools based on developmental stages:
 
     **Gemini (High School):**
+
     - More sophisticated research capabilities
     - Integration with Google Workspace for older students
     - Appropriate for college-prep academic work
 
     **Magic School (Middle School):**
+
     - Designed specifically for middle school curriculum
     - Age-appropriate content and guardrails
     - Educational focus for grades 6-8
 
     **Toddle AI (Elementary):**
+
     - Embedded in familiar LMS platform
     - Teacher-supervised and guided
     - Age-appropriate for grades 1-5
 
     **Benefits:**
+
     - Safety and appropriateness for each age group
     - Integration with division-specific systems
     - Teacher oversight and monitoring
   </Accordion>
-
   <Accordion title="Can I use ChatGPT or Claude for personal learning?" icon="house-user">
     **Yes, with guidelines:**
 
     ✅ **Allowed:**
+
     - Personal exploration and curiosity
     - Comparing different AI tools
     - Learning about AI technology
     - Non-academic projects
 
     ⚠️ **Requirements:**
+
     - Don't share personal or confidential information
     - Follow age restrictions and parental consent
     - Never use for academic work without teacher permission
     - Apply same ethical standards as with Gemini
 
     ❌ **Not Allowed:**
+
     - Using for graded assignments without permission
     - Circumventing SAS AI policies
     - Accessing age-inappropriate content
   </Accordion>
-
   <Accordion title="Will my teacher know if I used AI?" icon="eye">
     **Possibly, yes:**
 
@@ -568,22 +573,24 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
     4. **Content Mismatch:** AI output may not match your typical writing style
 
     **Best Approach:**
+
     - Always be transparent about AI use
     - Cite AI assistance appropriately
     - Ask permission before using AI
     - Use AI to learn, not to deceive
   </Accordion>
-
   <Accordion title="Is AI-generated content plagiarism?" icon="copy">
     **It depends on how you use it:**
 
     **YES, it's plagiarism if:**
+
     - You submit AI-generated work as entirely your own
     - You don't cite AI assistance
     - You use AI when it's prohibited
     - You copy AI output without understanding it
 
     **NO, it's not plagiarism if:**
+
     - You use AI as a learning tool and cite it
     - You transform AI suggestions into your own work
     - Teacher permits AI use and you document it
@@ -591,28 +598,29 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 
     See [AI Academic Integrity](/ai-resources/ai-academic-integrity) for detailed guidance.
   </Accordion>
-
   <Accordion title="Can AI help me with math homework?" icon="calculator">
     **Yes, but use it correctly:**
 
     ✅ **Good Uses:**
+
     - "Explain how to solve this type of problem"
     - "What steps should I follow for [concept]?"
     - "Check if my answer is correct and explain why"
     - "Generate similar practice problems"
 
     ❌ **Poor Uses:**
+
     - "Solve this problem for me" (and copying the answer)
     - Using AI for all homework without learning
     - Not understanding AI's solution process
 
     **Remember:** Math is about learning problem-solving, not just getting answers. Use AI to understand concepts, not to bypass learning.
   </Accordion>
-
   <Accordion title="What if AI gives me wrong information?" icon="triangle-exclamation">
     **AI can and does make mistakes!**
 
     **What to do:**
+
     1. Always verify important facts with reliable sources
     2. Cross-check AI information, especially for academic work
     3. Don't trust AI blindly - use critical thinking
@@ -620,6 +628,7 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
     5. Cite multiple sources, not just AI
 
     **Common AI Mistakes:**
+
     - Fabricated citations or sources ("hallucinations")
     - Outdated information (training data cutoff)
     - Misunderstanding your question
@@ -633,39 +642,16 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 ## Related Resources
 
 <CardGroup cols={2}>
-  <Card
-    title="Gemini Usage Guide"
-    icon="google"
-    href="/ai-resources/gemini-guide"
-    color="#1A4190"
-  >
+  <Card title="Gemini Usage Guide" icon="google" color="#1A4190" href="/ai-resources/gemini-guide">
     Learn how to use SAS's official AI tool effectively
   </Card>
-
-  <Card
-    title="AI Ethics & Responsible Use"
-    icon="scale-balanced"
-    href="/ai-resources/ai-ethics"
-    color="#E51322"
-  >
+  <Card title="AI Ethics & Responsible Use" icon="scale-balanced" color="#E51322" href="/ai-resources/ai-ethics">
     Understand ethical considerations when using AI
   </Card>
-
-  <Card
-    title="AI Academic Integrity"
-    icon="certificate"
-    href="/ai-resources/ai-academic-integrity"
-    color="#1A4190"
-  >
+  <Card title="AI Academic Integrity" icon="certificate" color="#1A4190" href="/ai-resources/ai-academic-integrity">
     Know the rules for AI use in academic work
   </Card>
-
-  <Card
-    title="Google Workspace"
-    icon="google"
-    href="/guides/accounts/google-workspace"
-    color="#E51322"
-  >
+  <Card title="Google Workspace" icon="google" color="#E51322" href="/guides/accounts/google-workspace">
     Access your SAS Google account and apps
   </Card>
 </CardGroup>
@@ -675,22 +661,12 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 ## Need Help?
 
 <CardGroup cols={2}>
-  <Card
-    title="EdTech Support"
-    icon="chalkboard-user"
-    href="mailto:edtech@sas.edu.sg"
-    color="#1A4190"
-  >
+  <Card title="EdTech Support" icon="chalkboard-user" color="#1A4190" href="mailto:edtech@sas.edu.sg">
     Questions about AI tools and policies
 
     [edtech@sas.edu.sg](mailto:edtech@sas.edu.sg)
   </Card>
-
-  <Card
-    title="Your Teacher"
-    icon="user"
-    color="#E51322"
-  >
+  <Card title="Your Teacher" icon="user" color="#E51322">
     Ask about AI use for specific assignments
 
     Check class policies and expectations
