Documentation edits made through Mintlify web editor

--- a/ai-resources/ai-tools-overview.mdx
+++ b/ai-resources/ai-tools-overview.mdx
@@ -44,7 +44,7 @@ SAS provides age-appropriate AI tools for different divisions:
 
 # AI Events in the Region
 
-<iframe src="https://script.google.com/a/macros/sas.edu.sg/s/AKfycbzU5LFBLg1sa_1p0oSyfaAujBrROAw5tsr2OhJ1z_bdc9FjqVD2RzY3-Qrf_KHcH6J5/exec" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-top-navigation" allowfullscreen loading="lazy" title="Upcoming Events" />
+<iframe src="https://script.google.com/a/macros/sas.edu.sg/s/AKfycbzU5LFBLg1sa_1p0oSyfaAujBrROAw5tsr2OhJ1z_bdc9FjqVD2RzY3-Qrf_KHcH6J5/exec" />
 
 ---
 
