--- a/ai-resources/ai-tools-overview.mdx
+++ b/ai-resources/ai-tools-overview.mdx
@@ -44,11 +44,7 @@ SAS provides age-appropriate AI tools for different divisions:
 
 ## AI Events in the Region
 
-<iframe src="https://script.google.com/a/macros/sas.edu.sg/s/AKfycbzU5LFBLg1sa_1p0oSyfaAujBrROAw5tsr2OhJ1z_bdc9FjqVD2RzY3-Qrf_KHcH6J5/exec" width="100%" height="2000" frameBorder="0" sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-top-navigation" style={{ 
-  border: 'none',
-  display: 'block',
-  margin: '0 auto'
-}} title="Upcoming Events" />
+<iframe src="https://sas-ai-events-list.pages.dev/" width="100%" height="2000" frameBorder="0" title="Upcoming Events" />
 
 ---
 
@@ -405,46 +401,49 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 <Steps>
   <Step title="1. Use AI to Learn, Not to Replace Learning">
     **Good Use:**
+
     - Ask AI to explain a difficult concept
     - Have AI generate practice problems
     - Use AI to check your understanding
 
     **Poor Use:**
+
     - Copy AI-generated essays without understanding
     - Use AI to complete all your homework
     - Rely on AI instead of learning the material
   </Step>
-
   <Step title="2. Always Cite AI Use">
     When using AI for any academic work:
+
     - Document which AI tool you used
     - Explain how you used it
     - Cite AI-generated content appropriately
     - Follow your teacher's citation requirements
 
     **Example Citation:**
+
     > "I used Google Gemini to brainstorm initial ideas for this essay and to check grammar in my final draft."
   </Step>
-
   <Step title="3. Verify AI Information">
     AI can make mistakes!
+
     - Don't assume AI responses are always accurate
     - Cross-check important facts with reliable sources
     - Verify citations and references AI provides
     - Use critical thinking to evaluate AI output
   </Step>
-
   <Step title="4. Use AI Ethically">
     Follow [AI Ethics & Responsible Use](/ai-resources/ai-ethics) and [Academic Integrity](/ai-resources/ai-academic-integrity) guidelines:
+
     - Respect academic honesty policies
     - Don't use AI to cheat
     - Consider bias in AI responses
     - Respect intellectual property
     - Protect privacy (yours and others')
   </Step>
-
   <Step title="5. Ask When Unsure">
     **Before using AI for any assignment:**
+
     - Check the assignment instructions
     - Ask your teacher if AI use is permitted
     - Clarify how AI should be cited
@@ -459,31 +458,30 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 ### For Students
 
 <Accordion title="New to AI? Start Here" icon="rocket">
-  **Step 1: Learn About Gemini**
-  Read the [Gemini Usage Guide](/ai-resources/gemini-guide) to understand SAS's official AI tool.
+  **Step 1: Learn About Gemini** Read the [Gemini Usage Guide](/ai-resources/gemini-guide) to understand SAS's official AI tool.
 
-  **Step 2: Understand the Rules**
-  Review [AI Academic Integrity](/ai-resources/ai-academic-integrity) to know what's allowed.
+  **Step 2: Understand the Rules** Review [AI Academic Integrity](/ai-resources/ai-academic-integrity) to know what's allowed.
 
-  **Step 3: Practice Responsibly**
-  Start with low-stakes activities:
+  **Step 3: Practice Responsibly** Start with low-stakes activities:
+
   - Ask Gemini to explain a homework concept
   - Have Gemini quiz you on study material
   - Use Gemini to brainstorm project ideas
 
-  **Step 4: Ask Your Teacher**
-  Before using AI for graded work, always confirm it's permitted.
+  **Step 4: Ask Your Teacher** Before using AI for graded work, always confirm it's permitted.
 </Accordion>
 
 ### For Teachers
 
 <Accordion title="Integrating AI in Your Classroom" icon="chalkboard-user">
   **Resources for Educators:**
+
   - [Gemini for Educators Guide](/ai-resources/gemini-guide#for-teachers)
   - [Setting AI Policies for Your Class](/ai-resources/ai-academic-integrity#teacher-guidance)
   - [AI Ethics Curriculum](/ai-resources/ai-ethics)
 
   **Contact EdTech for Support:**
+
   - Lesson plan integration
   - AI literacy curriculum
   - Student training sessions
@@ -496,18 +494,19 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 
 <Accordion title="Supporting Your Child's AI Learning" icon="users">
   **Understanding AI at SAS:**
+
   - SAS uses Google Gemini as the official AI tool
   - AI is used to enhance learning, not replace it
   - Academic integrity policies apply to AI use
   - Age-appropriate guidelines are in place
 
   **Questions to Ask Your Child:**
+
   - "How are you using AI for schoolwork?"
   - "What has your teacher said about AI for this assignment?"
   - "Can you explain what the AI helped you learn?"
 
-  **Concerns?**
-  Contact your child's teacher or EdTech Support: [edtech@sas.edu.sg](mailto:edtech@sas.edu.sg)
+  **Concerns?** Contact your child's teacher or EdTech Support: [edtech@sas.edu.sg](mailto:edtech@sas.edu.sg)
 </Accordion>
 
 ---
@@ -516,51 +515,55 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 
 <AccordionGroup>
   <Accordion title="Why does SAS use different AI tools for each division?" icon="question">
-    **Age-Appropriate AI:**
-    SAS provides different AI tools based on developmental stages:
+    **Age-Appropriate AI:** SAS provides different AI tools based on developmental stages:
 
     **Gemini (High School):**
+
     - More sophisticated research capabilities
     - Integration with Google Workspace for older students
     - Appropriate for college-prep academic work
 
     **Magic School (Middle School):**
+
     - Designed specifically for middle school curriculum
     - Age-appropriate content and guardrails
     - Educational focus for grades 6-8
 
     **Toddle AI (Elementary):**
+
     - Embedded in familiar LMS platform
     - Teacher-supervised and guided
     - Age-appropriate for grades 1-5
 
     **Benefits:**
+
     - Safety and appropriateness for each age group
     - Integration with division-specific systems
     - Teacher oversight and monitoring
   </Accordion>
-
   <Accordion title="Can I use ChatGPT or Claude for personal learning?" icon="house-user">
     **Yes, with guidelines:**
 
     ✅ **Allowed:**
+
     - Personal exploration and curiosity
     - Comparing different AI tools
     - Learning about AI technology
     - Non-academic projects
 
     ⚠️ **Requirements:**
+
     - Don't share personal or confidential information
     - Follow age restrictions and parental consent
     - Never use for academic work without teacher permission
     - Apply same ethical standards as with Gemini
 
     ❌ **Not Allowed:**
+
     - Using for graded assignments without permission
     - Circumventing SAS AI policies
     - Accessing age-inappropriate content
   </Accordion>
-
   <Accordion title="Will my teacher know if I used AI?" icon="eye">
     **Possibly, yes:**
 
@@ -570,22 +573,24 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
     4. **Content Mismatch:** AI output may not match your typical writing style
 
     **Best Approach:**
+
     - Always be transparent about AI use
     - Cite AI assistance appropriately
     - Ask permission before using AI
     - Use AI to learn, not to deceive
   </Accordion>
-
   <Accordion title="Is AI-generated content plagiarism?" icon="copy">
     **It depends on how you use it:**
 
     **YES, it's plagiarism if:**
+
     - You submit AI-generated work as entirely your own
     - You don't cite AI assistance
     - You use AI when it's prohibited
     - You copy AI output without understanding it
 
     **NO, it's not plagiarism if:**
+
     - You use AI as a learning tool and cite it
     - You transform AI suggestions into your own work
     - Teacher permits AI use and you document it
@@ -593,28 +598,29 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 
     See [AI Academic Integrity](/ai-resources/ai-academic-integrity) for detailed guidance.
   </Accordion>
-
   <Accordion title="Can AI help me with math homework?" icon="calculator">
     **Yes, but use it correctly:**
 
     ✅ **Good Uses:**
+
     - "Explain how to solve this type of problem"
     - "What steps should I follow for [concept]?"
     - "Check if my answer is correct and explain why"
     - "Generate similar practice problems"
 
     ❌ **Poor Uses:**
+
     - "Solve this problem for me" (and copying the answer)
     - Using AI for all homework without learning
     - Not understanding AI's solution process
 
     **Remember:** Math is about learning problem-solving, not just getting answers. Use AI to understand concepts, not to bypass learning.
   </Accordion>
-
   <Accordion title="What if AI gives me wrong information?" icon="triangle-exclamation">
     **AI can and does make mistakes!**
 
     **What to do:**
+
     1. Always verify important facts with reliable sources
     2. Cross-check AI information, especially for academic work
     3. Don't trust AI blindly - use critical thinking
@@ -622,6 +628,7 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
     5. Cite multiple sources, not just AI
 
     **Common AI Mistakes:**
+
     - Fabricated citations or sources ("hallucinations")
     - Outdated information (training data cutoff)
     - Misunderstanding your question
@@ -635,39 +642,16 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 ## Related Resources
 
 <CardGroup cols={2}>
-  <Card
-    title="Gemini Usage Guide"
-    icon="google"
-    href="/ai-resources/gemini-guide"
-    color="#1A4190"
-  >
+  <Card title="Gemini Usage Guide" icon="google" color="#1A4190" href="/ai-resources/gemini-guide">
     Learn how to use SAS's official AI tool effectively
   </Card>
-
-  <Card
-    title="AI Ethics & Responsible Use"
-    icon="scale-balanced"
-    href="/ai-resources/ai-ethics"
-    color="#E51322"
-  >
+  <Card title="AI Ethics & Responsible Use" icon="scale-balanced" color="#E51322" href="/ai-resources/ai-ethics">
     Understand ethical considerations when using AI
   </Card>
-
-  <Card
-    title="AI Academic Integrity"
-    icon="certificate"
-    href="/ai-resources/ai-academic-integrity"
-    color="#1A4190"
-  >
+  <Card title="AI Academic Integrity" icon="certificate" color="#1A4190" href="/ai-resources/ai-academic-integrity">
     Know the rules for AI use in academic work
   </Card>
-
-  <Card
-    title="Google Workspace"
-    icon="google"
-    href="/guides/accounts/google-workspace"
-    color="#E51322"
-  >
+  <Card title="Google Workspace" icon="google" color="#E51322" href="/guides/accounts/google-workspace">
     Access your SAS Google account and apps
   </Card>
 </CardGroup>
@@ -677,22 +661,12 @@ While Gemini is our official tool, you may encounter other AI tools. Here's what
 ## Need Help?
 
 <CardGroup cols={2}>
-  <Card
-    title="EdTech Support"
-    icon="chalkboard-user"
-    href="mailto:edtech@sas.edu.sg"
-    color="#1A4190"
-  >
+  <Card title="EdTech Support" icon="chalkboard-user" color="#1A4190" href="mailto:edtech@sas.edu.sg">
     Questions about AI tools and policies
 
     [edtech@sas.edu.sg](mailto:edtech@sas.edu.sg)
   </Card>
-
-  <Card
-    title="Your Teacher"
-    icon="user"
-    color="#E51322"
-  >
+  <Card title="Your Teacher" icon="user" color="#E51322">
     Ask about AI use for specific assignments
 
     Check class policies and expectations
