Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Welcome to SAS Technology Knowledge Base"
-description: "Your resource hub for technology guides, how-tos, systems, apps, and AI tools at Singapore American School"
+description: "Your resource hub for technology guides, how-tos, systems, apps, at Singapore American School"
 sidebarTitle: "Knowledgebase"
 ---
 
